--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
+/* *{
+  border: 0;
+  padding: 0;
+  margin: 0;
+} */
 .App {
   text-align: center;
 }
 
-p{
-  color: black;
+
+
+.lorem{
+  font-size: 30px;
 }
 
 /* .App-logo {
@@ -19,22 +26,64 @@ p{
 
 .container{
   max-width: auto;
-  margin: 0 auto;
-  background: #f9f9f9;
+  margin-top: 0;
+  padding-top: 0;
+  background: #1261A0;
   font-size: 24px;
-  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-/* .parallax{
-  background: url('./solo-files/photo1.jpg') no-repeat center;
-  background-size: cover;
+.parallax{
+  background: url('./solo-files/photo2.jpg') no-repeat center;
+  background-size: auto;
   background-attachment: fixed;
-  height: 500px;
-} */
+  height: 600px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start center;
+  justify-content: flex-start;
+}
+
+.parallax2{
+  background: url('./solo-files/photo3.png') no-repeat center;
+  background-size: auto;
+  background-attachment: fixed;
+  height: 600px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start center;
+  justify-content: flex-start;
+}
+
+.parallax3{
+  background: url('./solo-files/photo4.jpg') no-repeat center;
+  background-size: auto;
+  background-attachment: fixed;
+  height: 600px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start center;
+  justify-content: flex-start;
+}
 
 .App-header {
   background-color: #282c34;
-  /* background-image: url('./solo-files/photo1.jpg'); */
+  background-image: url('./solo-files/photo1.jpg');
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -42,6 +91,7 @@ p{
   justify-content: space-evenly;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 0;
 }
 
 .arrow{
