--- a/src/components/Body/Banner/Banner.css
+++ b/src/components/Body/Banner/Banner.css
@@ -7,3 +7,14 @@
     width: 1000px;
     height: 500px;
   }
+
+.banner{
+    /* border: 2px solid black; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 3rem;
+    font-weight: bold;
+    font-style: italic;
+}
+
