--- a/src/components/Forms/Searchbar.css
+++ b/src/components/Forms/Searchbar.css
@@ -9,12 +9,17 @@ input{
     background-size: 30px 30px;
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
-    margin-top: 20px;
     color: white;
     font-family: Helvetica;
     font-size: 20px;
     border-radius: 2px;
     border: 2px solid #f9f9f9;
+}
+
+form{
+    align-items: center;
+    padding: 0;
+    margin: 0;
 }
 
 ::placeholder{
